# bios-checker

./: Cargo.toml  Dockerfile  README.md  build.sh  run.sh
bios-checker/: Cargo.toml
bios-checker/src/: bios.rs  lib.rs  main.rs
lambda-notifiers/: Cargo.toml
lambda-notifiers/src/: lib.rs
lambda-notifiers/src/notifiers/: discord.rs  email.rs
src/: bios.rs  main.rs  smtp.rs
