[package]
name = "bios-checker"
version = "0.1.0"
authors = ["Bryan Hitchcock <bryanhitc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
# log = "0.4"
# simple-error = "0.2"
# simple_logger = "1.11.0"
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.3", features = ["full"] }
reqwest = { version = "0.11", features = ["gzip", "socks"] }
lettre = { git = "https://github.com/lettre/lettre", features= ["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }
lambda_runtime = "0.3"
