[package]
name = "bios-checker"
version = "0.1.0"
authors = ["Bryan Hitchcock <bryanhitc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1"
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["gzip", "socks", "rustls-tls"] }
lettre = { git = "https://github.com/lettre/lettre", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
lambda-notifiers = { path = "../lambda-notifiers" }
lambda_runtime = "0.4"
