[package]
name = "bios-checker"
version = "0.1.0"
authors = ["Bryan Hitchcock <bryanhitc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
lambda-notifiers = { path = "../lambda-notifiers" }
reqwest = { version = "0.12", default-features = false, features = [
    "gzip",
    "socks",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "tracing"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
