[package]
name = "lambda-notifiers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
lettre = { git = "https://github.com/lettre/lettre", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "http", "model", "rustls_backend"] }
tokio = "1.8"
unicase = "2.6"
