[package]
name = "lambda-notifiers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "builder",
] }
log = "0.4"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
tokio = { version = "1", features = ["rt", "tracing"] }
